data/derived/sp14/progs/unify/prog3914.ml.out
Characters 19-23:
  let _ = eval (Sine(VarX ** VarY), 0.0, 0.0);;
                     ^^^^
Error: This expression has type expr but an expression was expected of type
         float
